<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="Login1"
            tools:ignore="MissingConstraints"
            android:layout_marginBottom="31dp" app:layout_constraintEnd_toEndOf="@+id/editText2"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <Button
            android:text="@string/return1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            tools:ignore="MissingConstraints"
            android:onClick="Returnit"
            app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginLeft="1dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/button" android:layout_marginStart="1dp"/>
    <TextView
            android:hint="@string/validation"
            android:layout_width="211dp"
            android:layout_height="78dp"
            android:id="@+id/textView3"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="255dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:hint="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText"
            tools:ignore="MissingConstraints"
            android:autofillHints=""
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="26dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:hint="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editText2"
            tools:ignore="MissingConstraints"
            android:autofillHints=""
            app:layout_constraintStart_toStartOf="@+id/editText" android:layout_marginTop="19dp"
            app:layout_constraintTop_toBottomOf="@+id/editText"/>
</androidx.constraintlayout.widget.ConstraintLayout>