<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/return1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            tools:ignore="MissingConstraints"
            android:onClick="Returnit"
            app:layout_constraintStart_toStartOf="@+id/button2" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" android:layout_marginBottom="280dp"/>
    <Button
            android:text="@string/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            tools:ignore="MissingConstraints"
            android:hint="@string/sec"
            android:layout_marginTop="242dp"
            android:layout_marginBottom="25dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="14dp"
            android:layout_marginStart="14dp" android:layout_marginEnd="14dp" android:layout_marginRight="14dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>