<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
            android:text="@string/return1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            tools:ignore="MissingConstraints"
            android:onClick="Returnit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="58dp" android:layout_marginStart="58dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
    />
    <TextView
            android:layout_width="294dp"
            android:layout_height="36dp"
            android:id="@+id/view2"
            tools:ignore="MissingConstraints"
            android:text="@string/result"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="58dp" android:layout_marginStart="58dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="59dp" android:layout_marginRight="59dp" android:layout_marginBottom="224dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="103dp" app:layout_constraintTop_toBottomOf="@+id/return2"/>
    <Button
            android:text="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/return2"
            android:onClick="Checkit"
            tools:ignore="MissingConstraints,OnClick"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" app:layout_constraintStart_toEndOf="@+id/button5"
            android:layout_marginLeft="118dp" android:layout_marginStart="118dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="59dp"
            android:layout_marginRight="59dp"/>
    <TextView
            android:text="@string/first_task"
            android:layout_width="294dp"
            android:layout_height="36dp" android:id="@+id/textView"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="58dp"
            android:layout_marginStart="58dp" android:layout_marginTop="104dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="59dp" android:layout_marginRight="59dp"/>
    <TextView
            android:text="@string/second_task"
            android:layout_width="294dp"
            android:layout_height="36dp" android:id="@+id/textView2"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="58dp" android:layout_marginStart="58dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="59dp" android:layout_marginRight="59dp" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="294dp"
            android:layout_height="96dp"
            android:id="@+id/progressBar"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="58dp" android:layout_marginStart="58dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="59dp" android:layout_marginRight="59dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button5"/>
</androidx.constraintlayout.widget.ConstraintLayout>